feat: added simple connection on click between server and client